--- a/index.html
+++ b/index.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    p {
+      background-color: rgb(30, 255, 0);
+      margin: 0;
+      padding:0;
+      font-family: verdana;
+      font-size: 20px;
+      text-align: center;
+    }
+    button {
+      color:aqua;
+      background-color:rgba(46, 184, 108, 0.5);
+      margin-top: 0;
+    }
+    body {
+      background-color: rgb(0, 255, 200);
+    }
+    img{
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 25%;
+    }
+  </style>
 </head>
 <body>
-    <form action="#" method="GET">
-        <fieldset>
-            <input type="time" name="my_time" id=""><br><br>
-            <input type="range" name="range" id="" min="10" max="50"><br><br>
-            <input type="url" name="myURL" id="tin"><br><br>
-            <input type="search" name="tin" id="tin"><br><br>
-            <input type="tel" name="tel" id="tel">
-            
-            <input type="submit" value="click"><br>
-        </fieldset>
-    </form>
-    <button onclick="funName()">click here</button>
+  <p id="demo1">Hello World</p>
+  <img src="file:///D:/NLP/5ec1b11766f88839dfa7a246975754c9.jpg" alt="photo" id="demo">
+  <button onclick="myPhoto()">change</button>
+  
+  <ul id="demo3">
     
-    <script src="javascript.js"></script>
+  </ul>
+  <script src="javascript.js"></script>
 </body>
 </html>
