while loop testing

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   <img src="file:///D:/NLP/5ec1b11766f88839dfa7a246975754c9.jpg" alt="photo" id="demo">
   <button onclick="myPhoto()">change</button>
   
-  <ul id="demo3">
+  <ol id="demo3">
     
-  </ul>
+  </ol>
   <script src="javascript.js"></script>
 </body>
 </html>
