--- a/index.html
+++ b/index.html
@@ -4,39 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    p {
-      background-color: rgb(30, 255, 0);
-      margin: 0;
-      padding:0;
-      font-family: verdana;
-      font-size: 20px;
-      text-align: center;
-    }
-    button {
-      color:aqua;
-      background-color:rgba(46, 184, 108, 0.5);
-      margin-top: 0;
-    }
-    body {
-      background-color: rgb(0, 255, 200);
-    }
-    img{
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 25%;
-    }
-  </style>
 </head>
 <body>
-  <p id="demo1">Hello World</p>
-  <img src="file:///D:/NLP/5ec1b11766f88839dfa7a246975754c9.jpg" alt="photo" id="demo">
-  <button onclick="myPhoto()">change</button>
-  
-  <ol id="demo3">
-    
-  </ol>
+  <input type="text" value="" id="demo">
+  <button onclick=dayOfChange()>check day</button>
   <script src="javascript.js"></script>
 </body>
 </html>
